add bootstrap and basic page layout such as header, sidebars, description

--- a/index.html
+++ b/index.html
@@ -2,15 +2,81 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="css/bootstrap.css" rel ="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title>Test</title>
+    <title>rtmath PixelWorks</title>
   </head>
   <body>
-    <p>
-      <h1>Test</h1>
-      <img src="img/button.png">
-      <img src="img/linkedinbutton.png">
-      <img src="img/twitterbutton.png" alt="" />
-    </p>
+    <div class="container conborder">
+      <div class="row">
+        <div class="col-xs-1 col-md-2 colborder">
+          <h2>Media</h2>
+          <hr>
+          <div class="centpic">
+            <!-- <img class ="center-block" src="img/button.png"> -->
+            <a href="linkedin.com"><img class ="center-block" src="img/linkedinbutton.png"></a>
+            <a href="twitter.com"><img class ="center-block" src="img/twitterbutton.png"></a>
+          </div>
+        </div>
+        <div class="col-xs-10 col-md-8 colborder">
+          <div class="header">
+            <h2 id="pwheader">PixelWorks <small>by Ryan Mathisen</small></h2>
+            <hr>
+          </div>
+        </div>
+        <div class="col-xs-1 col-md-2 colborder sbtext">
+          <h2>Experience</h2>
+          <hr>
+          <p class="center">Languages:</p>
+            <ul class="list-inline">
+              <li><a target="_blank" href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a> / <a target="_blank" href="https://en.wikipedia.org/wiki/C%2B%2B">C++</a></li>
+              <li><a target="_blank" href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
+              <li><a target="_blank" href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a></li>
+              <li><a target="_blank" href="https://en.wikipedia.org/wiki/HTML5">HTML5</a> / <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets#CSS_3">CSS3</a></li>
+            </ul>
+          <p class="center">Frameworks:</p>
+            <ul class="list-inline">
+              <li><a target="_blank" href="https://www.qt.io/">QT</a></li>
+              <li><a target="_blank" href="https://msdn.microsoft.com/en-us/library/bb385954.aspx">STL</a></li>
+              <li><a target="_blank" href="https://bitbucket.org/libtcod/libtcod">libtcod</a></li>
+              <li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
+            </il>
+          <div class="centpic">
+          </div>
+      </div><!--End Row-->
+      <div class="row" id="botrow">
+        <div class="col-md-2 conborder"></div>
+        <div class="col-md-8 colborder">
+          <h2>Background</h2>
+          <hr>
+          <p>Ryan comes from a strong technology and video game background. A veritible jack-of-all-trades, his experience ranges from creating pixel art, sound effects and music to technical work with low level game frameworks and engines. He firmly believes that <br><strong><em>no problem is without a solution</em></strong>.</p>
+        </div>
+        <div class="col-md-2 conborder"></div>
+      </div><!--End Row-->
+    </div><!--End Container-->
   </body>
 </html>
+
+
+<!--REQUIRED CONTENT-->
+<!--Your name-->
+<!--An image of you or something that represents who you are.-->
+<!--A list of projects you have created with active links to them (GH or GH pages)-->
+<!--An "About Me" section, including background and current interests/hobbies/skills.-->
+<!--Create gh-pages branch to view on Github.io-->
+<!--README.md-->
+
+<!--OBJECTIVES-->
+<!--HTML tags that must be incorporated: p, h, ul, ol, li, em, strong, a, img, div, span-->
+<!--Bootstrap classes are used to styles your page.-->
+<!--A custom-made stylesheet that uses cascading, the box model, and floats is included.-->
+<!--Indentation and spacing of HTML and CSS is accurate.-->
+<!--Commits made regularly with clear messages that finish the phrase "It will…"-->
+<!--A project README that includes:
+author name
+project or program name
+description of program
+program setup instructions
+link to site on GitHub Pages
+copyright and license information-->
+<!--Site is successfully deployed to GitHub pages.-->
