add portrait to center of page, link to github, and update css

--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
           <hr>
           <div class="centpic">
             <!-- <img class ="center-block" src="img/button.png"> -->
-            <a href="linkedin.com"><img class ="center-block" src="img/linkedinbutton.png"></a>
-            <a href="twitter.com"><img class ="center-block" src="img/twitterbutton.png"></a>
+            <a href="linkedin.com"><img class ="center-block" src="img/linkedinbutton.png" alt="linkedin"></a>
+            <a href="twitter.com"><img class ="center-block" src="img/twitterbutton.png" alt="twitter"></a>
           </div>
         </div>
         <div class="col-xs-10 col-md-8 colborder">
           <div class="header">
             <h2 id="pwheader">PixelWorks <small>by Ryan Mathisen</small></h2>
             <hr>
+          </div>
+          <div class="body">
+            <a href="https://github.com/rtmath"><img id="selfport" class="center-block" src="img/self.jpg" alt="self portrait"></a>
+            <span id="github"><a href="https://github.com/rtmath" target="_blank">View Code Samples Here</a></span>
           </div>
         </div>
         <div class="col-xs-1 col-md-2 colborder sbtext">
@@ -35,7 +39,7 @@
               <li><a target="_blank" href="https://en.wikipedia.org/wiki/HTML5">HTML5</a> / <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets#CSS_3">CSS3</a></li>
             </ul>
           <p class="center">Frameworks:</p>
-            <ul class="list-inline">
+            <ol class="list-inline">
               <li><a target="_blank" href="https://www.qt.io/">QT</a></li>
               <li><a target="_blank" href="https://msdn.microsoft.com/en-us/library/bb385954.aspx">STL</a></li>
               <li><a target="_blank" href="https://bitbucket.org/libtcod/libtcod">libtcod</a></li>
@@ -49,7 +53,7 @@
         <div class="col-md-8 colborder">
           <h2>Background</h2>
           <hr>
-          <p>Ryan comes from a strong technology and video game background. A veritible jack-of-all-trades, his experience ranges from creating pixel art, sound effects and music to technical work with low level game frameworks and engines. He firmly believes that <br><strong><em>no problem is without a solution</em></strong>.</p>
+          <p>Ryan comes from a strong technological background. A veritible jack-of-all-trades, his experience ranges from creating pixel art, sound effects and music to technical work with low level game frameworks and engines. He firmly believes that <br><strong><em>no problem is without a solution</em></strong>. His hobbies include chess, video games, and wrestling with code.</p>
         </div>
         <div class="col-md-2 conborder"></div>
       </div><!--End Row-->
@@ -59,15 +63,15 @@
 
 
 <!--REQUIRED CONTENT-->
-<!--Your name-->
+<!-- √ Your name-->
 <!--An image of you or something that represents who you are.-->
 <!--A list of projects you have created with active links to them (GH or GH pages)-->
-<!--An "About Me" section, including background and current interests/hobbies/skills.-->
+<!-- √ An "About Me" section, including background and current interests/hobbies/skills.-->
 <!--Create gh-pages branch to view on Github.io-->
 <!--README.md-->
 
 <!--OBJECTIVES-->
-<!--HTML tags that must be incorporated: p, h, ul, ol, li, em, strong, a, img, div, span-->
+<!--HTML tags that must be incorporated: √ p, √ h, √ ul, **ol**, √ li, √ em, √ strong, √ a, √ img, √ div, √ span-->
 <!--Bootstrap classes are used to styles your page.-->
 <!--A custom-made stylesheet that uses cascading, the box model, and floats is included.-->
 <!--Indentation and spacing of HTML and CSS is accurate.-->
