--- a/index.html
+++ b/index.html
@@ -8,55 +8,78 @@
   </head>
   <body>
     <div class="container conborder">
-      <div class="row">
-        <div class="col-xs-1 col-md-2 colborder">
-          <h2>Media</h2>
-          <hr>
-          <div class="centpic">
-            <!-- <img class ="center-block" src="img/button.png"> -->
-            <a href="linkedin.com"><img class ="center-block" src="img/linkedinbutton.png" alt="linkedin"></a>
-            <a href="twitter.com"><img class ="center-block" src="img/twitterbutton.png" alt="twitter"></a>
+      <div class="row"> <!--First Row-->
+        <div class="row-height">
+          <div class="col-height">
+            <div class="col-xs-1 col-md-2 colborder">
+              <h2>Media</h2>
+              <hr>
+              <div class="centpic">
+                <!-- <img class ="center-block" src="img/button.png"> -->
+                <a href="linkedin.com"><img class ="center-block" src="img/linkedinbutton.png" alt="linkedin"></a>
+                <a href="twitter.com"><img class ="center-block" src="img/twitterbutton.png" alt="twitter"></a>
+              </div>
+            </div>
+            <div class="col-xs-10 col-md-8 colborder">
+              <div class="header">
+                <h2 id="pwheader">PixelWorks <small>by Ryan Mathisen</small></h2>
+                <hr>
+              </div>
+              <div class="body">
+                <a href="https://github.com/rtmath"><img id="selfport" class="center-block" src="img/self.jpg" alt="self portrait"></a>
+                <span id="github"><a href="https://github.com/rtmath" target="_blank">View Code Samples Here</a></span>
+              </div>
+            </div>
+            <div class="col-xs-1 col-md-2 colborder sbtext">
+              <h2>Experience</h2>
+              <hr>
+              <p class="center">Languages:</p>
+                <ul class="list-inline">
+                  <li><a target="_blank" href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a> / <a target="_blank" href="https://en.wikipedia.org/wiki/C%2B%2B">C++</a></li>
+                  <li><a target="_blank" href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
+                  <li><a target="_blank" href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a></li>
+                  <li><a target="_blank" href="https://en.wikipedia.org/wiki/HTML5">HTML5</a> / <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets#CSS_3">CSS3</a></li>
+                </ul>
+              <p class="center">Frameworks:</p>
+                <ol class="list-inline">
+                  <li><a target="_blank" href="https://www.qt.io/">QT</a></li>
+                  <li><a target="_blank" href="https://msdn.microsoft.com/en-us/library/bb385954.aspx">STL</a></li>
+                  <li><a target="_blank" href="https://bitbucket.org/libtcod/libtcod">libtcod</a></li>
+                  <li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
+                </il>
+            </div>
           </div>
         </div>
-        <div class="col-xs-10 col-md-8 colborder">
-          <div class="header">
-            <h2 id="pwheader">PixelWorks <small>by Ryan Mathisen</small></h2>
-            <hr>
-          </div>
-          <div class="body">
-            <a href="https://github.com/rtmath"><img id="selfport" class="center-block" src="img/self.jpg" alt="self portrait"></a>
-            <span id="github"><a href="https://github.com/rtmath" target="_blank">View Code Samples Here</a></span>
+      </div><!--End Row-->
+      <div class="row" id="midrow"> <!--Second Row-->
+        <div class="row-height">
+          <div class="col-height">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <p>Current Projects:</p>
+                <ol class="nav nav-tabs">
+                  <li><a href="https://github.com/rtmath">Chess Engine</a></li>
+                  <li role="navigation"><a href="https://github.com/rtmath">Machine Learning</a></li>
+                  <li role="navigation"><a href="https://github.com/rtmath">Riddle Game</a></li>
+                </ol>
+            </div>
+            <div class="col-md-2"></div>
           </div>
         </div>
-        <div class="col-xs-1 col-md-2 colborder sbtext">
-          <h2>Experience</h2>
-          <hr>
-          <p class="center">Languages:</p>
-            <ul class="list-inline">
-              <li><a target="_blank" href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a> / <a target="_blank" href="https://en.wikipedia.org/wiki/C%2B%2B">C++</a></li>
-              <li><a target="_blank" href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
-              <li><a target="_blank" href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a></li>
-              <li><a target="_blank" href="https://en.wikipedia.org/wiki/HTML5">HTML5</a> / <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets#CSS_3">CSS3</a></li>
-            </ul>
-          <p class="center">Frameworks:</p>
-            <ol class="list-inline">
-              <li><a target="_blank" href="https://www.qt.io/">QT</a></li>
-              <li><a target="_blank" href="https://msdn.microsoft.com/en-us/library/bb385954.aspx">STL</a></li>
-              <li><a target="_blank" href="https://bitbucket.org/libtcod/libtcod">libtcod</a></li>
-              <li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
-            </il>
-          <div class="centpic">
-          </div>
       </div><!--End Row-->
       <div class="row" id="botrow">
-        <div class="col-md-2 conborder"></div>
-        <div class="col-md-8 colborder">
-          <h2>Background</h2>
-          <hr>
-          <p>Ryan comes from a strong technological background. A veritible jack-of-all-trades, his experience ranges from creating pixel art, sound effects and music to technical work with low level game frameworks and engines. He firmly believes that <br><strong><em>no problem is without a solution</em></strong>. His hobbies include chess, video games, and wrestling with code.</p>
+        <div class="row-height">
+          <div class="col-height">
+            <div class="col-md-2 conborder"></div>
+            <div class="col-md-8 colborder">
+              <h2>Background</h2>
+              <hr>
+              <p>Coming from a strong technological background, Ryan is a veritible jack-of-all-trades. His experience ranges from creating pixel art, sound effects and music to technical work with low level game frameworks and engines. He firmly believes that <br><strong><em>no problem is without a solution</em></strong>. His hobbies include chess, video games, and wrangling code.</p>
+            </div>
+            <div class="col-md-2 conborder"></div>
+          </div>
         </div>
-        <div class="col-md-2 conborder"></div>
-      </div><!--End Row-->
+      </div><!--End Row--> <!--Third Row-->
     </div><!--End Container-->
   </body>
 </html>
@@ -64,8 +87,8 @@
 
 <!--REQUIRED CONTENT-->
 <!-- √ Your name-->
-<!--An image of you or something that represents who you are.-->
-<!--A list of projects you have created with active links to them (GH or GH pages)-->
+<!-- √ An image of you or something that represents who you are.-->
+<!-- √ A list of projects you have created with active links to them (GH or GH pages)-->
 <!-- √ An "About Me" section, including background and current interests/hobbies/skills.-->
 <!--Create gh-pages branch to view on Github.io-->
 <!--README.md-->
