add xs col responsiveness, improvements to formatting, and a couple color tweaks

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel ="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title>rtmath PixelWorks</title>
+    <title>PixelWorks</title>
   </head>
   <body>
-    <div class="container conborder">
+    <div class="container"><!--Begin Container-->
       <div class="row"> <!--First Row-->
         <div class="row-height">
           <div class="col-height">
-            <div class="col-xs-1 col-md-2 colborder">
+            <div class="col-xs-3 col-md-2">
               <h2>Media</h2>
               <hr>
               <div class="centpic">
                 <!-- <img class ="center-block" src="img/button.png"> -->
-                <a href="linkedin.com"><img class ="center-block" src="img/linkedinbutton.png" alt="linkedin"></a>
-                <a href="twitter.com"><img class ="center-block" src="img/twitterbutton.png" alt="twitter"></a>
+                <a target="_blank" href="https://linkedin.com"><img class ="center-block margin_remove" src="img/linkedinbutton.png" alt="linkedin"></a>
+                <a target="_blank" href="https://twitter.com"><img class ="center-block margin_remove" src="img/twitterbutton.png" alt="twitter"></a>
               </div>
             </div>
-            <div class="col-xs-10 col-md-8 colborder">
+            <div class="col-xs-6 col-md-8">
               <div class="header">
-                <h2 id="pwheader">PixelWorks <small>by Ryan Mathisen</small></h2>
+                <h2 id="pwheader">PixelWorks <small><em> a website by Ryan Mathisen</em></small></h2>
                 <hr>
               </div>
               <div class="body">
@@ -30,7 +30,7 @@
                 <span id="github"><a href="https://github.com/rtmath" target="_blank">View Code Samples Here</a></span>
               </div>
             </div>
-            <div class="col-xs-1 col-md-2 colborder sbtext">
+            <div class="col-xs-3 col-md-2 sbtext">
               <h2>Experience</h2>
               <hr>
               <p class="center">Languages:</p>
@@ -54,32 +54,34 @@
       <div class="row" id="midrow"> <!--Second Row-->
         <div class="row-height">
           <div class="col-height">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <p>Current Projects:</p>
-                <ol class="nav nav-tabs">
-                  <li><a href="https://github.com/rtmath">Chess Engine</a></li>
-                  <li role="navigation"><a href="https://github.com/rtmath">Machine Learning</a></li>
-                  <li role="navigation"><a href="https://github.com/rtmath">Riddle Game</a></li>
+            <div class="col-xs-3 col-md-2"></div>
+            <div class="col-xs-6 col-md-8 horlist">
+              <div class="centerbox">
+                <h2>Current Projects:</h2><hr>
+                <ol>
+                  <li><a target="_blank" href="https://github.com/rtmath">Chess Engine</a></li>
+                  <li><a target="_blank"  href="https://github.com/rtmath">Machine Learning</a></li>
+                  <li><a target="_blank" href="https://github.com/rtmath">Riddle Game</a></li>
                 </ol>
+              </div>
             </div>
-            <div class="col-md-2"></div>
+            <div class="col-xs-3 col-md-2"></div>
           </div>
         </div>
       </div><!--End Row-->
       <div class="row" id="botrow">
         <div class="row-height">
           <div class="col-height">
-            <div class="col-md-2 conborder"></div>
-            <div class="col-md-8 colborder">
+            <div class="col-xs-3 col-md-2"></div>
+            <div class="col-xs-6 col-md-8">
               <h2>Background</h2>
               <hr>
-              <p>Coming from a strong technological background, Ryan is a veritible jack-of-all-trades. His experience ranges from creating pixel art, sound effects and music to technical work with low level game frameworks and engines. He firmly believes that <br><strong><em>no problem is without a solution</em></strong>. His hobbies include chess, video games, and wrangling code.</p>
+              <p>Coming from a strong technological background, Ryan is a veritible jack-of-all-trades. His experience ranges from creating pixel art, sound effects and music to technical work with low level game frameworks and engines. He firmly believes that <br><strong>no problem is without a solution</strong>.</p>
             </div>
-            <div class="col-md-2 conborder"></div>
+            <div class="col-xs-3 col-md-2"></div>
           </div>
         </div>
-      </div><!--End Row--> <!--Third Row-->
+      </div><!--End Row--> <!--Third Row--><!--Third Row-->
     </div><!--End Container-->
   </body>
 </html>
@@ -94,11 +96,11 @@
 <!--README.md-->
 
 <!--OBJECTIVES-->
-<!--HTML tags that must be incorporated: √ p, √ h, √ ul, **ol**, √ li, √ em, √ strong, √ a, √ img, √ div, √ span-->
-<!--Bootstrap classes are used to styles your page.-->
-<!--A custom-made stylesheet that uses cascading, the box model, and floats is included.-->
-<!--Indentation and spacing of HTML and CSS is accurate.-->
-<!--Commits made regularly with clear messages that finish the phrase "It will…"-->
+<!--HTML tags that must be incorporated: √ p, √ h, √ ul, √ ol, √ li, √ em, √ strong, √ a, √ img, √ div, √ span (COMPLETE UNLESS GITHUB LINK BELOW PIC IS REMOVED)-->
+<!-- √ Bootstrap classes are used to styles your page.-->
+<!-- √ A custom-made stylesheet that uses cascading, the box model, and floats is included.-->
+<!-- √ Indentation and spacing of HTML and CSS is accurate.-->
+<!-- √ Commits made regularly with clear messages that finish the phrase "It will…"-->
 <!--A project README that includes:
 author name
 project or program name
