--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
             <div class="col-xs-3 col-md-2">
               <h2>Media</h2>
               <hr>
-              <div class="centpic">
-                <!-- <img class ="center-block" src="img/button.png"> -->
-                <a target="_blank" href="https://linkedin.com"><img class ="center-block margin_remove" src="img/linkedinbutton.png" alt="linkedin"></a>
-                <a target="_blank" href="https://twitter.com"><img class ="center-block margin_remove" src="img/twitterbutton.png" alt="twitter"></a>
+              <div>
+                <span><a class="link_shrink" target="_blank" href="https://linkedin.com"><img src="img/linkedinbutton.png" alt="linkedin"></a></span>
+                <span><a class="link_shrink" target="_blank" href="https://twitter.com"><img src="img/twitterbutton.png" alt="twitter"></a><span>
               </div>
             </div>
             <div class="col-xs-6 col-md-8">
@@ -26,11 +25,11 @@
                 <hr>
               </div>
               <div class="body">
-                <a href="https://github.com/rtmath"><img id="selfport" class="center-block" src="img/self.jpg" alt="self portrait"></a>
-                <span id="github"><a href="https://github.com/rtmath" target="_blank">View Code Samples Here</a></span>
+                <img id="pselect" class="center-block" src="img/pselect.png">
+                <span id="span_container"><a href="https://github.com/rtmath"><img id="selfport" class="center-block" src="img/self.jpg" alt="self portrait"><img id="player1" src="img/1p.png"></a></span>
               </div>
             </div>
-            <div class="col-xs-3 col-md-2 sbtext">
+            <div class="col-xs-3 col-md-2 text_sidebar">
               <h2>Experience</h2>
               <hr>
               <p class="center">Languages:</p>
@@ -93,7 +92,7 @@
 <!-- √ A list of projects you have created with active links to them (GH or GH pages)-->
 <!-- √ An "About Me" section, including background and current interests/hobbies/skills.-->
 <!--Create gh-pages branch to view on Github.io-->
-<!--README.md-->
+<!-- √ README.md-->
 
 <!--OBJECTIVES-->
 <!--HTML tags that must be incorporated: √ p, √ h, √ ul, √ ol, √ li, √ em, √ strong, √ a, √ img, √ div, √ span (COMPLETE UNLESS GITHUB LINK BELOW PIC IS REMOVED)-->
@@ -101,7 +100,7 @@
 <!-- √ A custom-made stylesheet that uses cascading, the box model, and floats is included.-->
 <!-- √ Indentation and spacing of HTML and CSS is accurate.-->
 <!-- √ Commits made regularly with clear messages that finish the phrase "It will…"-->
-<!--A project README that includes:
+<!-- √ A project README that includes:
 author name
 project or program name
 description of program
